# commoncrawl-challenge

./: .dockerignore  .gitignore  Makefile  README.md  airflow.Dockerfile  docker-compose.yml  example.env  pyproject.toml
dags/: common_crawl_dag.py
data/: tlds.csv
scripts/: download_segments.sh  load_links.py  process_links.py  read_warc.py  read_warc_async.py  read_warc_spark.py  save_partitioned_parquet.py  transform_and_analyze.py  utils.py
sql/: compute_metrics.sql  create_tables.sql
